5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1590_825.log
== TEST (2019-04-03 15:49:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = input("raio: ")

* from math
area = pi * (r ** 2)
vol = 4 * pi * (r ** 3) / 3

print(round(area, 3))
print(round(vol, 3))
-- ERROR:
File "XXXX", line 6
    * from math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:51:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = input("raio: ")

* from math import
area = pi * (r ** 2)
vol = 4 * pi * (r ** 3) / 3

print(round(area, 3))
print(round(vol, 3))
-- ERROR:
File "XXXX", line 6
    * from math import
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:51:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = input("raio: ")

from math import *
area = pi * (r ** 2)
vol = 4 * pi * (r ** 3) / 3

print(round(area, 3))
print(round(vol, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    area = pi * (r ** 2)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:51:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("raio: "))

from math import *
area = pi * (r ** 2)
vol = 4 * pi * (r ** 3) / 3

print(round(area, 3))
print(round(vol, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:51:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("raio: "))

from math import *
area = pi * (r ** 2)
vol = 4 * pi * (r ** 3) / 3

print(round(area, 3))
print(round(vol, 3))
-- EXECUTION TIME:
0.160689
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
